# discord_mcp

./: .cursorrules  .env.template  .gitignore  .gitpod.yml  .pre-commit-config.yaml  ACTION_PLAN_CLEANUP.md  AGENCY_INTEGRATION.md  AGENTS_CLEANUP_SUMMARY.md  AGENTS_VS_WORKFLOWS.md  AGENT_GRAPH_MIGRATION.md  BLUESCAL_WORKFLOW_SUMMARY.md  COMPREHENSIVE_CODE_REVIEW.md  COPILOT_SETUP.md  DUPLICATE_CODE_ANALYSIS.md  EVENT_AGENT_SUPABASE_SUMMARY.md  IMPLEMENTATION_PLAN.md  INSTALL.md  NOTION_SETUP.md  README.md  YOUTUBE_AGENCY_IMPLEMENTATION.md  YOUTUBE_VIDEO_ANALYSIS.md  analyze_video.py  check_discord_bot.py  extraction_agent_development.ipynb  pyproject.toml  pytest.ini  quick_test.py  requirements.txt  run.py  run_bluescal_direct.py  run_bluescal_minimal.py  run_bluescal_one_event.py  run_bluescal_one_event_final.py  run_bluescal_one_event_simple.py  run_mcp_server.py  run_tests.py  setup_copilot_mcp.py  test_bluescal_sync.py  test_bluescal_workflow.py  test_create_discord_event_bluesmuse.py  (+7 more)
.devcontainer/: devcontainer.json
.github/: copilot-instructions.md
.github/instructions/: README.md  cursor-mcp-workflows.md  mcp-agent.instructions.md  mcp-ce-tools.instructions.md  pydantic-ai-agents.instructions.md  pydantic-ai.instructions.md
.github/workflows/: daily-tumblr-sync.yml
TEMP/: .gitkeep
TESTS/: README.md  __init__.py  check_notion_db.py  test_bluesmuse_crawl.py  test_cache.py  test_complete_event_workflow.py  test_registry.py
TESTS/mcp_ce/: __init__.py
TESTS/mcp_ce/tools/notion/: __init__.py  (+4 more)
docs/: BLUESCAL_WORKFLOW.md  CACHE_MIGRATION_GUIDE.md  CODE_EXTRACTION_ARCHITECTURE.md  CODE_REVIEW_FINDINGS.md  CRAWL4AI_REFACTOR.md  DESIGN_PATTERNS.md  DISCORD_BOT_PATTERNS.md  DISCORD_BOT_TUMBLR_SHARING.md  DISCORD_TESTING_SUMMARY.md  MOBILE_DEVELOPMENT.md  TUMBLR_DAILY_SYNC.md  TUMBLR_FEED_LINEAR_PLAN.md  TUMBLR_FEED_WORKFLOW.md  TUMBLR_REPOST_TOOL.md
docs/supabase/: RUN_MIGRATION.md  TUMBLR_FEED_SETUP.md
scripts/: create_linear_issues.py  run_daily_tumblr_sync.py  run_migration_supabase_cli.ps1  run_migration_supabase_cli.sh  run_tumblr_schema_migration.py  verify_mobile_setup.py
setup/: CURSOR_AUTO_TOOLS.md  CURSOR_SETUP.md  README.md  SETUP_SUMMARY.md  configure-cursor.ps1  configure-cursor.sh  cursor-mcp-config.json  install.ps1  install.sh
src/: registry.py
src/agency/: README.md  YOUTUBE_RESEARCH_README.md  __init__.py  agency.py  main.py  youtube_agency.py  youtube_research_prd.md  youtube_shared_instructions.md
src/agency/crawl4ai_agent/: README.md  __init__.py  crawl4ai_agent.py  instructions.md
src/agency/example_agent/: example_agent.py
src/agency/example_agent2/: example_agent2.py
src/agency/instructions/: mcp-code-exec.md  summary.py  test.ipynb  video.txt  write-instructions.md  youtube-research-notes.md
src/agency/notion_agent/: README.md  __init__.py  instructions.md  notion_agent.py
src/agency/research_coordinator/: __init__.py  instructions.md  research_coordinator.py
src/agency/summarizer_agent/: __init__.py  instructions.md  summarizer_agent.py
src/agency/youtube_agent/: __init__.py  instructions.md  youtube_agent.py
src/discord_mcp/: __init__.py  bot.py  handlers.py  server.py  tools.py
src/mcp_ce/: AGENCY_TOOLS_CONSOLIDATION.md  README.md  YOUTUBE_AGENT_README.md  __init__.py  __main__.py  runtime.py  sandbox.py  server.py  server_enhanced.py  test_discovery.py  youtube_analysis_agent.py
src/mcp_ce/agentic_tools/: AGENT_MODEL_CONFIG.md  ARCHITECTURE.md  __init__.py  logfire_config.py
src/mcp_ce/agents/: NOTION_SETUP.md  create_youtube_research_plan.py  extract_structured_data.py  facebook_event_agent.py  save_article.py
src/mcp_ce/cache/: __init__.py  cache.py  cache_manager.py  notion_cache.py
src/mcp_ce/models/: __init__.py  article.py  events.py  notion_export.py  tumblr.py  youtube.py
src/mcp_ce/tools/: model.py
src/mcp_ce/url_ping/: ping_url.py  server.py
src/notion_mcp/: README.md  __init__.py  client.py  example.py
supabase/: config.toml
supabase/migrations/: 20251120191303_create_tumblr_posts_table.sql
test/: README.md  conftest.py  test_registry_enforcement.py  test_scrape_date.py
test/mcp_ce/tools/: __init__.py
(+137 files in other folders)
