[project]
name = "mcp-discord"
version = "0.1.0"
description = "Discord integration for Model Context Protocol with multi-agent research capabilities"
authors = [
    {name = "Hanweg Altimer", email = "hanwegaltimer@outlook.com"},
]
dependencies = [
    "mcp",
    "mcp-agent",
    "fastapi",
    "fastmcp",
    "mcp-agent[openai]",
    "discord.py",
    "langchain",
    "langchain-openai",
    "langchain-text-splitters",
    "google-api-python-client",
    "youtube-transcript-api",
    "audioop-lts",
    "notion-client"

]
requires-python = ">=3.10"
readme = "README.md"
license = {file = "LICENSE"}

[project.optional-dependencies]
dev = [
    "uvicorn"
]

[project.urls]
Homepage = "https://github.com/jaewilson07/discord_mcp"
Repository = "https://github.com/jaewilson07/discord_mcp.git"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/discord_mcp", "src/agency", "src/mcp_ce"]

[project.scripts]
mcp-discord = "discord_mcp.server:main"
mcp-code-execution = "mcp_ce.server:mcp.run"
mcp-server-enhanced = "mcp_ce.server_enhanced:mcp.run"
mcp-discord-integrated = "mcp_ce.server_with_discord:mcp.run"
youtube-research = "agency.youtube_agency:main"
agency-demo = "agency.agency:main"