[project]
name = "mcp-discord"
version = "0.1.0"
description = "Discord integration for Model Context Protocol with multi-agent research capabilities"
authors = [
    {name = "Hanweg Altimer", email = "hanwegaltimer@outlook.com"},
]
dependencies = [
    "mcp",
    "mcp-agent",
    "fastapi",
    "fastmcp",
    "mcp-agent[openai]",
    "discord.py",
    "langchain",
    "langchain-openai",
    "langchain-text-splitters",
    "google-api-python-client",
    "youtube-transcript-api",
    "notion-client",
    # audioop-lts is only needed on Python 3.13+ where the stdlib audioop module was removed
    # See README: it's optional and should not block installs on Python 3.10–3.12
    "audioop-lts; python_version >= '3.13'"

]
requires-python = ">=3.10"
readme = "README.md"
license = {file = "LICENSE"}

[project.optional-dependencies]
dev = [
    "uvicorn"
]

[project.urls]
Homepage = "https://github.com/jaewilson07/discord_mcp"
Repository = "https://github.com/jaewilson07/discord_mcp.git"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/discord_mcp", "src/mcp_ce"]

[project.scripts]
mcp-discord = "discord_mcp.server:main"
mcp-code-execution = "mcp_ce:main"